--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -11,6 +11,9 @@
   <div class="col-md-6 offset-3">
     <div class="card">
       <div class="card-header">Authentification</div>
+      <div th:if="${param.error}">
+        <p class="text-danger">[[${session.SPRING_SECURITY_LAST_EXCEPTION.message}]]</p>
+      </div>
       <div class="card-body">
         <form method="post" th:action="@{/login}">
           <div class="mb-3 mt-3">
