--- a/src/main/resources/templates/template1.html
+++ b/src/main/resources/templates/template1.html
@@ -25,7 +25,7 @@
           Patients
         </a>
         <ul class="dropdown-menu">
-         <li th:if="${#authorization.expression('hasRole(''ADMIN'')')}">
+         <li th:if="${#authorization.expression('hasAuthority(''ADMIN'')')}">
            <a class="dropdown-item" th:href="@{/admin/formPatients}">Nouveau</a></li>
          <li><a class="dropdown-item" th:href="@{/user/index}">Chercher</a>
          </li>
